--- a/AI-Hack-Frontend/src/index.scss
+++ b/AI-Hack-Frontend/src/index.scss
@@ -14,6 +14,28 @@
   box-sizing: border-box;
 }
 
+/* Стиль для скроллбара */
+::-webkit-scrollbar {
+  width: 6px; /* Ширина скроллбара */
+}
+
+/* Стиль для ползунка скроллбара */
+::-webkit-scrollbar-thumb {
+  background-color: var(--dark-gray); /* Цвет ползунка */
+  border-radius: 10px; /* Скругление углов ползунка */
+}
+
+/* Стиль для трека скроллбара */
+::-webkit-scrollbar-track {
+  background-color: #f1f1f1; /* Цвет трека */
+  border-radius: 10px; /* Скругление углов трека */
+}
+
+/* Стиль для угла скроллбара */
+::-webkit-scrollbar-corner {
+  background-color: var(--light-gray); /* Цвет угла */
+}
+
 a {
   font-weight: 500;
   color: #646cff;
