--- a/AI-Hack-Frontend/src/scss/index.scss
+++ b/AI-Hack-Frontend/src/scss/index.scss
@@ -46,14 +46,27 @@ a:hover {
   color: #535bf2;
 }
 
+html {
+  height: 100%;
+}
+
+body {
+  width: auto;
+  height: 100%;
+}
+
+#root {
+  height: 100%;
+}
+
 body {
   margin: 0;
   display: flex;
   place-items: center;
   min-width: 320px;
-  min-height: 100vh;
   box-sizing: border-box;
 }
+
 
 body {
   font-family: 'Montserrat', sans-serif;
